--- a/bash/config
+++ b/bash/config
@@ -92,7 +92,7 @@ function enter_directory {
     if [[ $PWD == $PREV_PWD ]]; then return; fi
     PREV_PWD=$PWD
     if [[ -e "package.json" ]]; then
-        nvm use `cat package.json | jq -r '.engines.node'`;
+        nvm use `cat package.json | jq -r '.engines.node' | tr -d '~'`;
     fi
 }
 
