--- a/bash/config
+++ b/bash/config
@@ -91,13 +91,10 @@ function set_prompt {
 function enter_directory {
     if [[ $PWD == $PREV_PWD ]]; then return; fi
     PREV_PWD=$PWD
-    if [[ -e "package.json" ]]; then
-        nvm use `cat package.json | jq -r '.engines.node' | tr -d '~'`;
-    fi
 }
 
 function prompt_command {
-  enter_directory
+  # enter_directory
   set_prompt
 }
 
