--- a/bash/config
+++ b/bash/config
@@ -88,13 +88,74 @@ function set_prompt {
     set_titlebar "$USER@${HOSTNAME%%.*} $PWD"
 }
 
+function set_terminal_colors {
+    local project_name=""
+
+    # Use git root as the project identifier if available
+    local git_root
+    git_root=$(git rev-parse --show-toplevel 2>/dev/null)
+    if [[ -n $git_root ]]; then
+        project_name="$git_root"
+    fi
+
+    # Skip if project hasn't changed
+    if [[ $project_name == "$_TERM_COLOR_PROJECT" ]]; then return; fi
+    _TERM_COLOR_PROJECT="$project_name"
+
+    if [[ -z $project_name ]]; then
+        # Reset to terminal default
+        printf '\e]111\a'
+        return
+    fi
+
+    # Check for per-project override in .git/info/terminal-color (hex format, e.g. #1a2b3c)
+    local override="$git_root/.git/info/terminal-color"
+    if [[ -f $override ]]; then
+        local color
+        color=$(<"$override")
+        color="${color#"${color%%[![:space:]]*}"}"
+        color="${color%"${color##*[![:space:]]}"}"
+        printf '\e]11;%s\a' "$color"
+        return
+    fi
+
+    # Hash project name to get a deterministic number
+    local hash
+    hash=$(printf '%s' "$project_name" | cksum | cut -d' ' -f1)
+
+    # Map hash to hue (0-359), keep saturation high, brightness low for readability
+    local hue=$((hash % 360))
+
+    # Convert HSB to RGB using integer math
+    # high=46 (~18% brightness), low=5 (~2%) gives a wide spread for visible color distinction
+    local r g b
+    local sector=$((hue / 60))
+    local remainder=$(( (hue % 60) * 255 / 60 ))
+
+    local low=5
+    local high=46
+    local mid=$(( low + (high - low) * remainder / 255 ))
+
+    case $sector in
+        0) r=$high; g=$mid;  b=$low  ;;
+        1) r=$(( high - (high - low) * remainder / 255 )); g=$high; b=$low ;;
+        2) r=$low;  g=$high; b=$mid  ;;
+        3) r=$low;  g=$(( high - (high - low) * remainder / 255 )); b=$high ;;
+        4) r=$mid;  g=$low;  b=$high ;;
+        5) r=$high; g=$low;  b=$(( high - (high - low) * remainder / 255 )) ;;
+    esac
+
+    printf '\e]11;#%02x%02x%02x\a' "$r" "$g" "$b"
+}
+
 function enter_directory {
     if [[ $PWD == $PREV_PWD ]]; then return; fi
     PREV_PWD=$PWD
+    set_terminal_colors
 }
 
 function prompt_command {
-  # enter_directory
+  enter_directory
   set_prompt
 }
 
